--- a/index.html
+++ b/index.html
@@ -9,40 +9,7 @@
   <body>
     <div class="container">
       <ul class="comments">
-        <li class="comment">
-          <div class="comment-header">
-            <div>Глеб Фокин</div>
-            <div>12.02.22 12:18</div>
-          </div>
-          <div class="comment-body">
-            <div class="comment-text">
-              Это будет первый комментарий на этой странице
-            </div>
-          </div>
-          <div class="comment-footer">
-            <div class="likes">
-              <span class="likes-counter">3</span>
-              <button class="like-button"></button>
-            </div>
-          </div>
-        </li>
-        <li class="comment">
-          <div class="comment-header">
-            <div>Варвара Н.</div>
-            <div>13.02.22 19:22</div>
-          </div>
-          <div class="comment-body">
-            <div class="comment-text">
-              Мне нравится как оформлена эта страница! ❤
-            </div>
-          </div>
-          <div class="comment-footer">
-            <div class="likes">
-              <span class="likes-counter">75</span>
-              <button class="like-button -active-like"></button>
-            </div>
-          </div>
-        </li>
+       
       </ul>
       <div class="add-form">
         <input
@@ -64,8 +31,88 @@
   </body>
 
   <script>
-    "use strict";
-    // Код писать здесь
-    console.log("It works!");
+    const comments = [];
+
+  const commentsList = document.querySelector('.comments');
+
+  const nameInput = document.querySelector('.add-form-name');
+  const commentInput = document.querySelector('.add-form-text');
+  const addButton = document.querySelector('.add-form-button');
+
+  nameInput.addEventListener('input', () => {
+    console.log('Имя изменено:', nameInput.value);
+  });
+
+  commentInput.addEventListener('input', () => {
+    console.log('Комментарий изменён:', commentInput.value);
+  });
+
+  function renderComments() {
+    commentsList.innerHTML = ''; 
+    comments.forEach((comment, index) => {
+      const formattedDate = new Date(comment.date).toLocaleDateString('ru-RU') + ' ' + new Date(comment.date).toLocaleTimeString('ru-RU').slice(0, 5);
+      const heartClass = comment.liked ? 'liked' : ''; 
+
+      const newComment = `
+        <li class="comment">
+          <div class="comment-header">
+            <div>${comment.name}</div>
+            <div>${formattedDate}</div>
+          </div>
+          <div class="comment-body">
+            <div class="comment-text">
+              ${comment.text}
+            </div>
+          </div>
+          <div class="comment-footer">
+            <div class="likes">
+              <span class="likes-counter">${comment.likes}</span>
+              <button class="like-button ${heartClass}" data-index="${index}"></button>
+            </div>
+          </div>
+        </li>
+      `;
+      commentsList.innerHTML += newComment;
+    });
+
+    const likeButtons = document.querySelectorAll('.like-button');
+    likeButtons.forEach(button => {
+      button.addEventListener('click', toggleLike);
+    });
+  }
+
+  addButton.addEventListener('click', () => {
+    const name = nameInput.value.trim();
+    const comment = commentInput.value.trim();
+
+    if (name === '' || comment === '') {
+      alert('Пожалуйста, заполните оба поля');
+      return;
+    }
+
+    comments.push({
+      name: name,
+      text: comment,
+      date: new Date(),
+      likes: 0,
+      liked: false
+    });
+
+
+    renderComments();
+    nameInput.value = '';
+    commentInput.value = '';
+  });
+
+  function toggleLike(event) {
+    const index = event.target.dataset.index;
+    const comment = comments[index];
+
+    comment.liked = !comment.liked;
+    comment.liked ? comment.likes++ : comment.likes--;
+
+    renderComments();
+  }
+  console.log("It works!");
   </script>
 </html>
